2007-10-26  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  vpn-password-dialog.c
		- Ensure errors are returned to NM when something goes wrong with
			the GetSecrets request, or when the VPN auth dialog is
			canceled

2007-10-26  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (security_combo_init): don't try accessing EAP method if EAP isn't
			configured

2007-10-26  Dan Williams  <dcbw@redhat.com>

	* (clear_vpn_details_widget, vpn_druid_vpn_type_page_next, edit_cb): use
		gtk_container_add/gtk_container_remove instead of reparenting widget

2007-10-25  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_get_secrets): fix logic of adding
			secrets to hash table to pass back to NM.  Add _each_ secret
			found to the hash table and pass the whole hash back to NM.

2007-10-25  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (get_default_type_for_security): avoid dereferencing auth_alg when
			it's NULL

2007-10-25  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wpa-psk.c
		- (ws_wpa_psk_new): hide Type combo as it's not being used yet

2007-10-24  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (file_to_g_byte_array): handle PEM format certificates too

2007-10-24  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (add_seen_bssid): don't segfault when the AP's bssid isn't valid

2007-10-24  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.h
	  src/menu-items.c
		- (nm_network_menu_item_set_ssid): use nm_utils_ssid_to_utf8()
		- (eel_make_valid_utf8, nm_menu_network_escape_essid_for_display):
			remove

2007-10-24  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
	  src/wireless-security/wireless-security.h
		- (ws_802_1x_auth_combo_init): add a 'default_method' argument used to
			pick the default EAP method when shown to the user

	* src/wireless-security/ws-dynamic-wep.c
	  src/wireless-security/ws-dynamic-wep.h